<resources>
    <string name="app_name">AE Mustering App</string>
    <string name="title_home">Home</string>
    <string name="login_for_mustering_app">Login for AE-Mustering App</string>
    <string name="tenant_domain_error">"Tenant should be of form https://hostname.com"</string>
    <string name="title_logout">Logout</string>
    <string name="text_welcome_ae_header">Welcome to AE Mustering App</string>
    <string name="text_welcome_ae_sub_header">Let\'s make access easier and faster for you</string>
    <string name="prompt_email">User Name </string>
    <string name="prompt_tenant">Tenant Name </string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_remember_me">Remember Me</string>
    <string name="action_sign_in">Login</string>
    <string name="powered_by">Powered By</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="open_gate">Open the door</string>
    <string name="invalid_username">Valid User name is required </string>
    <string name="invalid_tenant_contact_admin">Please contact Admin</string>
    <string name="invalid_password">Password is required</string>
    <string name="invalid_password_length">Password must be greater than 5 characters</string>
    <string name="invalid_tenant">Tenant is required</string>
    <string name="view_profile">"View Profile"</string>
    <string name="company_logo">Company Logo</string>
    <string name="logout_text">Logging you out</string>
    <string name="biometrics">biometrics</string>
    <string name="ByAlertEnterprise">" Powered By\nAlertEnterprise"</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_input">Enter OTP</string>
    <string name="please_enter_the_otp_sent">Please enter the OTP sent</string>
    <string name="on_your_email">on your email Id</string>
    <string name="verification_code">Verification Code</string>
    <string name="email_id">Email ID</string>
    <string name="phone">Phone</string>
    <string name="user_id">User ID</string>
    <string name="email">Email</string>
    <string name="alert_inc">AlertEnterprise Inc</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact">Contact</string>
    <string name="engineering">Engineering</string>
    <string name="admin_name">Admin name</string>
    <string name="organization">Organization</string>
    <string name="active_status">Active</string>
    <string name="on_hsc">on HSC</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="pwd">pwd</string>
    <string name="app_id">App ID</string>
    <string name="android">Android</string>
    <string name="device_version">Device Version</string>
    <string name="go_back">Go Back</string>
    <string name="change_password">Change Password</string>
    <string name="please_change_password_as_its_your_first_login">Please change your password </string>
    <string name="cancel">Cancel</string>
    <string name="login_using_your_biometrics">Login Using Your Biometrics</string>
    <string name="please_provide_location_access">Please Provide Location Access</string>
    <string name="password_should_contain_a_numeric_character">At least one Numeric Character.</string>
    <string name="password_should_contain_one_uppercase_character">At least one Uppercase Character</string>
    <string name="password_must_be_8_or_more_characters">Minimum 8 or more characters</string>
    <string name="password_should_contain_a_special_character">At least one Special Character</string>
    <string name="refresh">refresh</string>
    <string name="reload">reload</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_txt">Please enter the username to reset the password</string>

    <!-- Menu actions -->
    <string name="action_update">Update</string>
    <string name="action_enable">allow</string>
    <!--Key info -->
    <string name="key_info">Key info</string>
    <string name="key_info_label">Label:</string>
    <string name="key_info_type">Type:</string>
    <string name="ok">Ok</string>
    <string name="menu">menu</string>

</resources>