<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotPassword.ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/reset_password_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reset_password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password_hdr"
        android:layout_marginTop="30dp"
        android:text="@string/reset_password_txt"
        android:textAlignment="center"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userid_layout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/user_id"
        app:startIconDrawable="@drawable/baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/useridText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:maxLength="50" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotpwdSubmitBtn"
        style="@style/MaterialButtonStyle"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_below="@+id/userid_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/ByAlertEnterprise"
        android:src="@drawable/alert_power_by" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone" />

</RelativeLayout>