<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.otp.OtpActivity">

    <LinearLayout
        android:id="@+id/ae_otp_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/alert_power_by"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/verify_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ae_otp_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/verification_code"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sub_verify_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_text"
        android:layout_marginTop="15dp"
        android:text="@string/please_enter_the_otp_sent"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sub_verify_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_verify_text_1"
        android:layout_marginTop="17dp"
        android:text="@string/on_your_email"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_verify_text_2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_layout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_verify_text_2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/otp_input"
        app:startIconDrawable="@drawable/baseline_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLength="8"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/otp_submit_btn"
        style="@style/MaterialButtonStyle"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_below="@+id/otp_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/resend_otp_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/otp_submit_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/resend_otp"
        android:textColor="@color/color_states_text_view"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone" />

</RelativeLayout>