<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changePassword.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/ae_pwd_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/alert_power_by"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/change_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ae_pwd_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/change_password_sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_text"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/please_change_password_as_its_your_first_login"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_password_sub_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/prompt_new_password"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/length_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/length_check_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />

        <TextView
            android:id="@+id/length_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_must_be_8_or_more_characters" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numeric_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/length_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/numeric_check_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />

        <TextView
            android:id="@+id/numeric_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_should_contain_a_numeric_character" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numeric_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/upper_check_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />

        <TextView
            android:id="@+id/upper_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_should_contain_one_uppercase_character" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/special_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upper_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/special_check_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/baseline_cancel_24" />

        <TextView
            android:id="@+id/special_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/password_should_contain_a_special_character" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/special_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:hint="@string/prompt_confirm_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:startIconDrawable="@drawable/ic_baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_pwd_btn"
        style="@style/MaterialButtonStyle"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_below="@+id/confirm_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/submit"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>